# Gary

./: Cargo.toml  Dockerfile
contracts/src/: IIncredibleSquaringTaskManager.sol  IncredibleSquaringTaskManager.sol  TangleServiceManager.sol
db/: 03605395-1039-4b06-aae0-bead9918fec7  0aab0d2a-a533-453e-8df8-44eb59f20768  2c20bbef-a707-4d38-9f5a-8fc826083bbe  38c534d5-a099-44f1-91a8-ca4ecb905758  3a97ee68-af36-4771-bd78-448e0f770a36  57869e3c-2245-4d81-bb75-b8e7c3961ecb  586f9260-4d0c-44d3-b15b-f3cb10115975  7312e527-8fc8-4ff4-b070-8966b5f8e8c6  76231a72-7ef2-4a2e-b98a-52ca06cb60b6  90d15a4a-c738-48dc-b938-88d125f2fb4c  90dec218-43fe-4660-bc76-ab8093f8befa  955e49d6-e531-452a-af1f-f8fc9c8259a4  95a9dca1-c83f-492d-b581-7db69c88e51a  a0aaa9b5-45e0-4933-9991-a0455edf8bbc  b14e0155-ccf7-4fd2-97a7-d358fd861ec2  d34d0266-542d-4053-966d-c290df9cd56b  dc5ab030-6b57-422a-83f2-98dd89e5d19f  e5cce8cf-0caa-49b0-bf49-bc44f8f25232
scripts/: CreateTask.s.sol  ReadLatest.sol
src/: constants.rs  lib.rs  main.rs  tests.rs
src/contexts/: aggregator.rs  client.rs
src/jobs/: compute_x_square.rs  elgammal_aggregator.rs  initialize_task.rs
